tests/sumo/output/e3/errors/pos_false__entry/errors.sumo
Error: Attribute 'pos' in definition of detEntry '4/1to3/1' is not of type float.
Quitting (on error).
